<resources>
    <string name="app_name">Minhas Listas</string>
    <string name="usuario">Usuario</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="nome_input_registro">Nome Completo</string>
    <string name="seu_e_mail">Seu e-mail</string>
    <string name="confirma_senha">Confirma senha</string>
    <string name="registrar">Registrar</string>
    <string name="text_to_login">Já tem registro? Login aqui</string>
    <string name="Sem_Conta">Ainda não tem conta ? Crie aqui</string>
    <string name="web_client_id">23352328487-bhlj297hene3ca6rmb7lbpvgkuf8akrb.apps.googleusercontent.com</string>
</resources>