<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="30dp"
    android:background="#fff"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/usuario"
        android:textColor="@color/textColorInput"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/senha"
        android:textColor="@color/black"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/buttoncustumizer"
        android:text="@string/login"
        android:textColor="@color/white"
        />


</LinearLayout>