<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:background="#fff"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login">

    <TextView
        android:id="@+id/text_header_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textSize="18sp"
        android:textColor="@color/purple_700"
        android:textFontWeight="800"
        android:text="@string/login" />

    <EditText
        android:id="@+id/input_text_email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/seu_e_mail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/textColorInput" />

    <EditText
        android:id="@+id/input_text_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/senha"
        android:textColor="@color/black"
        android:importantForAutofill="no"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/botao_registrar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/buttoncustumizer"
        android:text="Entrar"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/text_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:text="@string/Sem_Conta" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_height="wrap_content" />


</LinearLayout>